--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ html{
     background-color: #000;
 }
 body{
+    background-color: white;
     width: 80%;
     margin: 0 auto;
     display: block;
@@ -34,6 +35,7 @@ nav{
     position: fixed;
     width: 80%;
     z-index: 99;
+    top: 0;
 }
 .nav-item{
     height: 100%;
@@ -87,6 +89,24 @@ input {
 }
 
 .button-search:hover {
+    opacity: 0.9;
+}
+.button-nav {
+    color: white;
+    font-weight: 700;
+    background: linear-gradient(90deg, rgba(229, 68, 58, 1) 0%, rgba(110, 45, 191, 1) 100%);
+    cursor: pointer;
+    height: 3em;
+    width: 50px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #9615DB;
+    border-style: solid solid solid none;
+}
+
+.button-nav:hover {
     opacity: 0.9;
 }
 
@@ -278,13 +298,13 @@ menu{
     flex-direction: column;
     justify-content: space-between;
 }
-.values-right{ text-align: right; margin-left: 2em;}
-.values-left{ text-align: left; margin-right: 2em;}
+.values-right{ text-align: right; margin-left: 1em;}
+.values-left{ text-align: left; margin-right: 1em;}
 .values-description .value-item{
     color: black;
-    font-size: 16px;
-    line-height: 23px;
-    text-align: left;
+    font-size: 17px;
+    line-height: 28px;
+    text-align: justify;
     margin-top: 1em;
     visibility: collapse;
 }
@@ -293,7 +313,10 @@ menu{
     margin-top: 1em;
 }
 .values-description div {
-    background-color: aliceblue;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 15px black;
+    padding: 10px;
     display: block;
 }
 
@@ -343,13 +366,36 @@ text {
 
 
 footer .footer-info{
+    gap: 2em;
     display: flex;
     background: linear-gradient(90deg, rgba(229, 68, 58, 0.9) 0%, rgba(110, 45, 191, 0.9) 100%);
     text-align: center;
-    padding: 3em 0;
+    padding: 4em 0;
+    line-height: 1.5em;
+}
+.footer-info:before,
+.footer-info:after {
+    content: "";
 }
 footer .footer-info div{
     flex: 1 1 0;
+}
+footer .footer-header{
+    height: 5em;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+}
+footer .footer-header h4{
+    margin: 0;
+}
+footer .footer-contact{
+    list-style: none;
+}
+footer .footer-contact ul{
+    list-style: none;
+    text-decoration: dashed underline #222;
+    text-underline-offset: 6px;
 }
 
 footer .copyright{
@@ -362,7 +408,11 @@ footer .copyright{
 
 
 
-
+#form-wrapper{
+    position: relative;
+    top: 6em;
+    margin: 3em;
+}
 #search-form {
     display: flex;
     justify-content: center;
@@ -415,7 +465,7 @@ footer .copyright{
     border: none;
     border-radius: 4px;
     font-size: 1em;
-    background-color: #cdcdcd;
+    background-color: #eee;
 }
 #results-list {
     display: flex;
